terapi & materi page done

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cnb_unselectedColor="@color/text_disable">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_terapi"
+        android:icon="@drawable/ic_footprints"
+        android:title="Terapi"
+        app:cnb_iconColor="@color/colorPrimaryDark"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_materi"
+        android:icon="@drawable/ic_materi"
+        android:title="Materi"
+        app:cnb_iconColor="@color/colorPrimaryDark"/>
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_anak"
+        android:icon="@drawable/ic_baby"
+        android:title="Anak"
+        app:cnb_iconColor="@color/colorPrimaryDark"/>
 
 </menu>
