--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_terapi">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="id.trydev.kupompong.ui.home.HomeFragment"
+        android:id="@+id/navigation_terapi"
+        android:name="id.trydev.kupompong.ui.terapi.TerapiFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_terapi" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="id.trydev.kupompong.ui.dashboard.DashboardFragment"
+        android:id="@+id/navigation_materi"
+        android:name="id.trydev.kupompong.ui.materi.MateriFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_materi" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="id.trydev.kupompong.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_anak"
+        android:name="id.trydev.kupompong.ui.anak.AnakFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_anak" />
 </navigation>
