--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,10 +38,14 @@
         <item name="fontFamily">@font/gill_sans_bold</item>
     </style>
 
-
     <style name="BaseHelvHeavy.TitleText">
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="BaseHelvHeavy.TitleText.AppBar">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 
     <style name="BaseHelvHeavy.SubTitle">
         <item name="android:textColor">@color/black</item>
