--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,21 @@
     android:layout_height="match_parent">
 
     <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:id="@+id/chip_view"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        app:cnb_addTopInset="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/round_top_right_left"
+        android:backgroundTint="@color/white"
         android:elevation="16dp"
         android:gravity="center"
-        app:labelVisibilityMode="labeled"
-        app:cnb_minExpandedWidth="16dp"
-        android:background="@drawable/round_top_right_left"
         android:translationZ="15dp"
+        app:cnb_addTopInset="true"
         app:cnb_menuResource="@menu/bottom_nav_menu"
-        android:backgroundTint="@color/white"
-        android:id="@+id/chip_view"
+        app:cnb_minExpandedWidth="16dp"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -41,9 +41,9 @@
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintBottom_toTopOf="@+id/chip_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
