--- a/app/src/main/res/layout/item_anak.xml
+++ b/app/src/main/res/layout/item_anak.xml
@@ -9,6 +9,7 @@
     android:layout_marginTop="8dp"
     app:contentPadding="16dp"
     app:cardCornerRadius="24dp"
+    android:id="@+id/item_body"
     android:elevation="4dp"
     android:layout_height="wrap_content">
 
@@ -17,7 +18,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/img_anak"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/pic_placeholder"
@@ -35,11 +36,11 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/img_anak"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_ttl"
             style="@style/BaseGillSansMedium"
             android:layout_width="0dp"
             android:textSize="12sp"
@@ -49,7 +50,7 @@
             android:text="Semarang, 12 Juli 2014"
             android:textColor="@color/text_disable"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/img_anak"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
         <TextView
@@ -57,13 +58,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Perumahan East Regency, Jl. Teuku Umar No. 51, Kebumen, Jawa Timur"
+            android:id="@+id/tv_address"
             android:textSize="12sp"
             android:layout_marginTop="8dp"
             android:layout_marginStart="24dp"
             android:textColor="@color/text_disable"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toEndOf="@+id/img_anak"
+            app:layout_constraintTop_toBottomOf="@+id/tv_ttl" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
