--- a/app/src/main/res/layout/activity_tambah_materi.xml
+++ b/app/src/main/res/layout/activity_tambah_materi.xml
@@ -106,14 +106,14 @@
                 />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/tv_audio_name"
                 style="@style/BaseHelvMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                android:text="nama file.mp3"
+                android:text=""
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/btn_simpan_pilihan"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btn_suara"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_audio_name" />
 
             <TextView
                 android:id="@+id/btn_suara"
@@ -172,6 +172,16 @@
                 app:layout_constraintStart_toEndOf="@+id/btn_play"
                 app:layout_constraintTop_toTopOf="@+id/btn_play" />
 
+            <ProgressBar
+                android:id="@+id/progress_submit_item"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_simpan_pilihan"
+                app:layout_constraintEnd_toEndOf="@+id/btn_simpan_pilihan"
+                app:layout_constraintStart_toStartOf="@+id/btn_simpan_pilihan"
+                app:layout_constraintTop_toTopOf="@+id/btn_simpan_pilihan" />
+
             <TextView
                 android:id="@+id/textView9"
                 style="@style/BaseHelvHeavy"
@@ -198,6 +208,17 @@
                 tools:itemCount="10"
                 tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/item_pilihan_jawaban_materi" />
+
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/progress_load_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTint="@color/colorPrimary"
+                android:layout_marginTop="56dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
