--- a/app/src/main/res/layout/item_materi.xml
+++ b/app/src/main/res/layout/item_materi.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
