--- a/app/src/main/res/layout/item_pilihan_jawaban_materi.xml
+++ b/app/src/main/res/layout/item_pilihan_jawaban_materi.xml
@@ -19,12 +19,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
-    <EditText
-        android:id="@+id/edt_option_text"
+    <TextView
+        android:id="@+id/tv_caption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_clip_materi_item"
-        android:inputType="textCapWords"
         android:paddingStart="32dp"
         android:paddingTop="16dp"
         android:paddingEnd="32dp"
@@ -39,7 +38,7 @@
         tools:text="tes" />
 
     <ImageButton
-        android:id="@+id/btn_filter"
+        android:id="@+id/btn_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
