read update delete anak done

--- a/app/src/main/res/layout/activity_anak.xml
+++ b/app/src/main/res/layout/activity_anak.xml
@@ -77,8 +77,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_profil"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/photo_placeholder"
                 android:focusable="true"
@@ -110,7 +110,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Nama Lengkap"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -127,7 +127,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 android:hint="Tempat Lahir"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -240,7 +240,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Alamat"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -257,7 +257,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Riwayat Pendidikan"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -286,7 +286,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Perkembangan Motorik"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -303,7 +303,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Perkembangan Bahasa"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -320,7 +320,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Diagnosis"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -337,7 +337,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Gejala"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -354,7 +354,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Riwayat Terapi"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
@@ -371,7 +371,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Medical Treatment"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
